<?xml version="1.0"?>
<package format="3">
  <name>replay_testing</name>
  <version>0.0.1</version>
  <description>A testing library and CLI for replaying ROS nodes.</description>

  <author email="troy@polymathrobotics.com">Troy Gibb</author>
  <maintainer email="troy@polymathrobotics.com">Troy Gibb</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mcap-ros2-support</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-termcolor</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>launch</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-junitparser</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
